Fix project page not being scrollable on small screen

--- a/docs/elements/project-page/project-page.css
+++ b/docs/elements/project-page/project-page.css
@@ -2,6 +2,10 @@
 	font-size: 1.2em;
 }
 
+#card {
+	overflow-y: auto;
+}
+
 #top-info {
 	display: flex;
 	flex-direction: row;
